--- a/web/style.css
+++ b/web/style.css
@@ -18,8 +18,9 @@ body {
 
 .compass-container {
     display: none;
+    position: absolute;
+    top: 50px;
     gap: 20px;
-    margin-top: 50px;
     opacity: 0;
     transform: translateY(-50px);
     transition: opacity 0.3s ease, transform 0.3s ease;
@@ -46,4 +47,5 @@ body {
 
 .card-item svg {
     fill: var(--svg-icon-color);
+
 }
